--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-i18next": "^15.4.1",
+    "react-simple-typewriter": "^5.0.1",
     "react-world-flags": "^1.6.0",
     "tailwindcss": "^4.0.12"
   },
